--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <div class="container">
   <div class="header-surface">
     <div class="header-top">
-      <div class="school">E.E. LYDIAKITZ MOREIRA</div>
+      <div class="school">E.E. PROFª WANDA MASCAGNI DE SÁ</div>
       <div class="meta">
         <div class="field"><label>NOME:</label>
           <select id="studentSelect" aria-label="Selecione o nome do aluno"></select>
@@ -89,7 +89,7 @@
     </div>
     <div class="centered-title">
       <h1>ATIVIDADE DE BIOLOGIA (3ºBIMESTRE)</h1>
-      <h2>"REVISÃO DOS TEMAS" - 10 QUESTÕES SORTEADAS</h2>
+      <h2>"REVISÃO DOS TEMAS"</h2>
     </div>
     <div class="small">Observação: as respostas serão enviadas automaticamente para a planilha institucional após confirmação.</div>
   </div>
@@ -740,3 +740,4 @@ document.getElementById('clearBtn').addEventListener('click',()=>{
 </script>
 </body>
 </html>
+
